update to snake-yaml 2.0