@@ -35,15 +35,15 @@ public class Primitive implements Converter {
     public Object fromConfig(Class type, Object section, ParameterizedType genericType) throws Exception {
         switch(type.getSimpleName()) {
             case "short":
-                return (section instanceof Short) ? section : new Integer((int) section).shortValue();
+                return (section instanceof Short) ? section : Integer.valueOf((int) section).shortValue();
             case "byte":
-                return (section instanceof Byte) ? section : new Integer((int) section).byteValue();
+                return (section instanceof Byte) ? section : Integer.valueOf((int) section).byteValue();
             case "float":
-                if ( section instanceof Integer ) {
-                    return new Double( (int) section ).floatValue();
+                if (section instanceof Integer) {
+                    return Double.valueOf( (int) section ).floatValue();
                 }
 
-                return (section instanceof Float) ? section : new Double((double) section).floatValue();
+                return (section instanceof Float) ? section : Double.valueOf((double) section).floatValue();
             case "char":
                 return (section instanceof Character) ? section : ((String) section).charAt(0);
             default:
